iframe overflow fix

--- a/happy-birthday/css/small.css
+++ b/happy-birthday/css/small.css
@@ -12,4 +12,8 @@ aside.right, aside.left{
     text-align: center;
     float: inherit;
 }  
- 
+
+iframe{
+    border-radius: 0;
+    width: 100%;
+}
